--- a/jeeadv.tex
+++ b/jeeadv.tex
@@ -20,7 +20,7 @@
 \item $\frac{2}{7}$
 \end{enumerate}
 
-\item For any $y \in \mathbb{R}$, let $\cot^{-1}(y) \in (0, \pi) \text{and} \tan^{-1}(y) \in \left( -\frac{\pi}{2}, \frac{\pi}{2} \right)$ .Then the sum of all the solutions of the equation $\tan^{-1}(\frac{6y}{9-y^2}) + \cot^{-1}(\frac{9-y^2}{6y}) =\frac{2\pi}{3}$ for $0 < |y| < 3$ is equal to\\
+\item For any $y \in \mathbb{R}$, let $\cot^{-1}(y) \in (0, \pi) \text{and} \tan^{-1}(y) \in \brak( -\frac{\pi}{2}, \frac{\pi}{2} \brak)$ .Then the sum of all the solutions of the equation $\tan^{-1}(\frac{6y}{9-y^2}) + \cot^{-1}(\frac{9-y^2}{6y}) =\frac{2\pi}{3}$ for $0 < |y| < 3$ is equal to\\
 \begin{enumerate}
 \item $2\sqrt{3}-3$
 \item $3 - 2\sqrt{3}$
@@ -64,7 +64,7 @@ $\vec{\overrightarrow{a}} = \hat{i} + 2\hat{j} - 5\hat{k}$, $\vec{\overrightarro
 \item There does NOT exist any function $f \quad in \quad S$ such that ${X_{f}} = 1$.
 \end{enumerate}
 
-\item For $x \in \mathbb{R}$, let $\tan^{-1}(x) \in \left( -\frac{\pi}{2}, \frac{\pi}{2} \right).$ Then the minimum value of the function $f: \mathbb{R} \to \mathbb{R}$ defined by $f(x) =  \int_0^{x\tan^{-1}x} \frac{e^{t-\cos t}}{1+t^{2023}}\, dt$
+\item For $x \in \mathbb{R}$, let $\tan^{-1}(x) \in \brak( -\frac{\pi}{2}, \frac{\pi}{2} \brak).$ Then the minimum value of the function $f: \mathbb{R} \to \mathbb{R}$ defined by $f(x) =  \int_0^{x\tan^{-1}x} \frac{e^{t-\cos t}}{1+t^{2023}}\, dt$
 
 \item For $x \in \mathbb{R}$, let $y(x)$ be a solution of the differential equation $ (x^2 - 5) \frac{dy}{dx} - 2xy = 2x{(x^2 - 5)^2}$  such that $y(2) = 7$. Then the maximum value of thefunction $y(x)$ is
 
@@ -92,7 +92,7 @@ Then the number of invertible matrices in $R$ is
 
 \begin{figure}[h]
     \centering
-	\includegraphics[width=5cm,height=5cm]{image.jpg}
+	\includegraphics[width=\columnwidth]{image.jpg}
     \caption{A 6x6 Square}
     \label{fig:Square}
 \end{figure}
