--- a/jeeadv.tex
+++ b/jeeadv.tex
@@ -7,7 +7,7 @@
 
 \begin{enumerate}
 \item Let $f :[1, \infty) \to \mathbb{R}$ be a differentiable function such that $f(1) = \frac{1}{3}$ and $3 \int_{1}^{x}  f(t) dt = x f(x) - \frac{x^2}{3},x \in [1, \infty).$ Let $e$ denote the base of the natural logarithm.Then the value of $f(e)$ is\\
-\begin{enumerate}[label=\Alph*.]
+\begin{enumerate}
 \item $\frac{e^2+4}{3}$
 \item $\frac{\log_{e}{4} + e}{3}$
 \item $\frac{4e^2}{3}$
